Playing with versions manual - documentation maintained per SOCI release. Manually formed structure works, but have to figure out how to get it right and make use of toctree.

--- a/_templates/sidebar_toc.html
+++ b/_templates/sidebar_toc.html
@@ -6,8 +6,8 @@
 <a href="{{ pathto('documentation') }}" title="Documentation">Documentation</a><br />
 <a href="{{ pathto('faq') }}" title="Frequently Asked Questions">FAQ</a><br />
 <a href="{{ pathto('people') }}" title="People">People</a><br />
-<a href="{{ pathto('Support') }}" title="Support">Support</a><br />
+<a href="{{ pathto('support') }}" title="Support">Support</a><br />
 <a href="{{ pathto('articles') }}" title="Articles">Articles</a><br />
-<a href="{{ pathto('Links') }}" title="Links">Links</a><br />
-<a href="{{ pathto('Copyright') }}" title="Copyright">Copyright</a><br />
+<a href="{{ pathto('links') }}" title="Links">Links</a><br />
+<a href="{{ pathto('copyright') }}" title="Copyright">Copyright</a><br />
 </p>
